dataset1235/2025-2/2318198438/users/1240871306/executions/1897677159_48684178.log
== SUBMISSION (2025-08-31 20:06:00)
-- CODE: 
idade = input("40:")
print("daqui a 10 anos, terei", 40 + 10, "anos")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
---- user output:
40:daqui a 10 anos, terei 50 anos
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
---- user output:
40:daqui a 10 anos, terei 50 anos
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
---- user output:
40:daqui a 10 anos, terei 50 anos
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
---- user output:
40:daqui a 10 anos, terei 50 anos
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
---- user output:
40:daqui a 10 anos, terei 50 anos
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
---- user output:
40:daqui a 10 anos, terei 50 anos
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 20:07:20)
-- CODE: 
idade = input(("Digite sua Idade:"))
print("Daqui a 10 anos, terei", idade + 10, "anos")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Daqui a 10 anos, terei", idade + 10, "anos")
                                    ~~~~~~^~~~
TypeError: can only concatenate str (not "int") to str
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Daqui a 10 anos, terei", idade + 10, "anos")
                                    ~~~~~~^~~~
TypeError: can only concatenate str (not "int") to str
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Daqui a 10 anos, terei", idade + 10, "anos")
                                    ~~~~~~^~~~
TypeError: can only concatenate str (not "int") to str
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Daqui a 10 anos, terei", idade + 10, "anos")
                                    ~~~~~~^~~~
TypeError: can only concatenate str (not "int") to str
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Daqui a 10 anos, terei", idade + 10, "anos")
                                    ~~~~~~^~~~
TypeError: can only concatenate str (not "int") to str
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Daqui a 10 anos, terei", idade + 10, "anos")
                                    ~~~~~~^~~~
TypeError: can only concatenate str (not "int") to str
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-31 20:06:57)
-- CODE: 
idade = input("Digite sua Idade:")
print("Daqui a 10 anos, terei", idade + 10, "anos")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Daqui a 10 anos, terei", idade + 10, "anos")
                                    ~~~~~~^~~~
TypeError: can only concatenate str (not "int") to str
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Daqui a 10 anos, terei", idade + 10, "anos")
                                    ~~~~~~^~~~
TypeError: can only concatenate str (not "int") to str
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Daqui a 10 anos, terei", idade + 10, "anos")
                                    ~~~~~~^~~~
TypeError: can only concatenate str (not "int") to str
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Daqui a 10 anos, terei", idade + 10, "anos")
                                    ~~~~~~^~~~
TypeError: can only concatenate str (not "int") to str
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Daqui a 10 anos, terei", idade + 10, "anos")
                                    ~~~~~~^~~~
TypeError: can only concatenate str (not "int") to str
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Daqui a 10 anos, terei", idade + 10, "anos")
                                    ~~~~~~^~~~
TypeError: can only concatenate str (not "int") to str
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-31 20:07:26)
-- CODE: 
idade = input(("Digite sua Idade:"))
print("Daqui a 10 anos, terei", idade + 10, "anos")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Daqui a 10 anos, terei", idade + 10, "anos")
                                    ~~~~~~^~~~
TypeError: can only concatenate str (not "int") to str
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Daqui a 10 anos, terei", idade + 10, "anos")
                                    ~~~~~~^~~~
TypeError: can only concatenate str (not "int") to str
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Daqui a 10 anos, terei", idade + 10, "anos")
                                    ~~~~~~^~~~
TypeError: can only concatenate str (not "int") to str
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Daqui a 10 anos, terei", idade + 10, "anos")
                                    ~~~~~~^~~~
TypeError: can only concatenate str (not "int") to str
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Daqui a 10 anos, terei", idade + 10, "anos")
                                    ~~~~~~^~~~
TypeError: can only concatenate str (not "int") to str
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Daqui a 10 anos, terei", idade + 10, "anos")
                                    ~~~~~~^~~~
TypeError: can only concatenate str (not "int") to str
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-31 20:05:21)
-- CODE: 
idade = input("40:")
print("daquia a 10 anos, terei", 40 + 5, "anos")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
---- user output:
40:daquia a 10 anos, terei 45 anos
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
---- user output:
40:daquia a 10 anos, terei 45 anos
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
---- user output:
40:daquia a 10 anos, terei 45 anos
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
---- user output:
40:daquia a 10 anos, terei 45 anos
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
---- user output:
40:daquia a 10 anos, terei 45 anos
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
---- user output:
40:daquia a 10 anos, terei 45 anos
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 20:01:58)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
---- user output:
None
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
---- user output:
None
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
---- user output:
None
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
---- user output:
None
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
---- user output:
None
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 20:06:53)
-- CODE: 
idade = input("Digite sua Idade:")
print("Daqui a 10 anos, terei", idade + 10, "anos")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Daqui a 10 anos, terei", idade + 10, "anos")
                                    ~~~~~~^~~~
TypeError: can only concatenate str (not "int") to str
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Daqui a 10 anos, terei", idade + 10, "anos")
                                    ~~~~~~^~~~
TypeError: can only concatenate str (not "int") to str
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Daqui a 10 anos, terei", idade + 10, "anos")
                                    ~~~~~~^~~~
TypeError: can only concatenate str (not "int") to str
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Daqui a 10 anos, terei", idade + 10, "anos")
                                    ~~~~~~^~~~
TypeError: can only concatenate str (not "int") to str
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Daqui a 10 anos, terei", idade + 10, "anos")
                                    ~~~~~~^~~~
TypeError: can only concatenate str (not "int") to str
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Daqui a 10 anos, terei", idade + 10, "anos")
                                    ~~~~~~^~~~
TypeError: can only concatenate str (not "int") to str
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 20:05:46)
-- CODE: 
idade = input("40:")
print("daqui a 10 anos, terei", 40 + 10, "anos")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
---- user output:
40:daqui a 10 anos, terei 50 anos
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
---- user output:
40:daqui a 10 anos, terei 50 anos
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
---- user output:
40:daqui a 10 anos, terei 50 anos
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
---- user output:
40:daqui a 10 anos, terei 50 anos
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
---- user output:
40:daqui a 10 anos, terei 50 anos
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
---- user output:
40:daqui a 10 anos, terei 50 anos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 20:07:28)
-- CODE: 
idade = input(("Digite sua Idade:"))
print("Daqui a 10 anos, terei", idade + 10, "anos")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Daqui a 10 anos, terei", idade + 10, "anos")
                                    ~~~~~~^~~~
TypeError: can only concatenate str (not "int") to str
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Daqui a 10 anos, terei", idade + 10, "anos")
                                    ~~~~~~^~~~
TypeError: can only concatenate str (not "int") to str
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Daqui a 10 anos, terei", idade + 10, "anos")
                                    ~~~~~~^~~~
TypeError: can only concatenate str (not "int") to str
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Daqui a 10 anos, terei", idade + 10, "anos")
                                    ~~~~~~^~~~
TypeError: can only concatenate str (not "int") to str
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Daqui a 10 anos, terei", idade + 10, "anos")
                                    ~~~~~~^~~~
TypeError: can only concatenate str (not "int") to str
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Daqui a 10 anos, terei", idade + 10, "anos")
                                    ~~~~~~^~~~
TypeError: can only concatenate str (not "int") to str
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 20:43:26)
-- CODE: 
5**0,5
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
---- user output:
None
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
---- user output:
None
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
---- user output:
None
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
---- user output:
None
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
---- user output:
None
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 20:05:23)
-- CODE: 
idade = input("40:")
print("daquia a 10 anos, terei", 40 + 5, "anos")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
---- user output:
40:daquia a 10 anos, terei 45 anos
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
---- user output:
40:daquia a 10 anos, terei 45 anos
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
---- user output:
40:daquia a 10 anos, terei 45 anos
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
---- user output:
40:daquia a 10 anos, terei 45 anos
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
---- user output:
40:daquia a 10 anos, terei 45 anos
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
---- user output:
40:daquia a 10 anos, terei 45 anos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 20:04:58)
-- CODE: 
idade = input("40 ":)
print("daquia a 10 anos, terei", 40 + 5, "anos")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
File "XXXX", line 1
    idade = input("40 ":)
                       ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
File "XXXX", line 1
    idade = input("40 ":)
                       ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
File "XXXX", line 1
    idade = input("40 ":)
                       ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
File "XXXX", line 1
    idade = input("40 ":)
                       ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
File "XXXX", line 1
    idade = input("40 ":)
                       ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
File "XXXX", line 1
    idade = input("40 ":)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 20:04:29)
-- CODE: 
idade = input("40 anos":)
print("daquia a 10 anos, rwrei", 40 + 5, "anos")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
File "XXXX", line 1
    idade = input("40 anos":)
                           ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
File "XXXX", line 1
    idade = input("40 anos":)
                           ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
File "XXXX", line 1
    idade = input("40 anos":)
                           ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
File "XXXX", line 1
    idade = input("40 anos":)
                           ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
File "XXXX", line 1
    idade = input("40 anos":)
                           ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
File "XXXX", line 1
    idade = input("40 anos":)
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 20:08:23)
-- CODE: 
idade = input(("Digite sua Idade:"))
print("Daqui a 10 anos, você terá ", idade + 10, "anos")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Daqui a 10 anos, você terá ", idade + 10, "anos")
                                         ~~~~~~^~~~
TypeError: can only concatenate str (not "int") to str
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Daqui a 10 anos, você terá ", idade + 10, "anos")
                                         ~~~~~~^~~~
TypeError: can only concatenate str (not "int") to str
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Daqui a 10 anos, você terá ", idade + 10, "anos")
                                         ~~~~~~^~~~
TypeError: can only concatenate str (not "int") to str
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Daqui a 10 anos, você terá ", idade + 10, "anos")
                                         ~~~~~~^~~~
TypeError: can only concatenate str (not "int") to str
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Daqui a 10 anos, você terá ", idade + 10, "anos")
                                         ~~~~~~^~~~
TypeError: can only concatenate str (not "int") to str
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Daqui a 10 anos, você terá ", idade + 10, "anos")
                                         ~~~~~~^~~~
TypeError: can only concatenate str (not "int") to str
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 20:05:42)
-- CODE: 
idade = input("40:")
print("daqui a 10 anos, terei", 40 + 10, "anos")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
---- user output:
40:daqui a 10 anos, terei 50 anos
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
---- user output:
40:daqui a 10 anos, terei 50 anos
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
---- user output:
40:daqui a 10 anos, terei 50 anos
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
---- user output:
40:daqui a 10 anos, terei 50 anos
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
---- user output:
40:daqui a 10 anos, terei 50 anos
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
---- user output:
40:daqui a 10 anos, terei 50 anos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 20:10:40)
-- CODE: 
idade = input(("40:"))
print("Daqui a 10 anos, você terá ", 40 + 10, "10")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
---- user output:
40:Daqui a 10 anos, você terá  50 10
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
---- user output:
40:Daqui a 10 anos, você terá  50 10
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
---- user output:
40:Daqui a 10 anos, você terá  50 10
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
---- user output:
40:Daqui a 10 anos, você terá  50 10
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
---- user output:
40:Daqui a 10 anos, você terá  50 10
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
---- user output:
40:Daqui a 10 anos, você terá  50 10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 20:04:59)
-- CODE: 
idade = input("40 ":)
print("daquia a 10 anos, terei", 40 + 5, "anos")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
File "XXXX", line 1
    idade = input("40 ":)
                       ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
File "XXXX", line 1
    idade = input("40 ":)
                       ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
File "XXXX", line 1
    idade = input("40 ":)
                       ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
File "XXXX", line 1
    idade = input("40 ":)
                       ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
File "XXXX", line 1
    idade = input("40 ":)
                       ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
File "XXXX", line 1
    idade = input("40 ":)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 20:05:14)
-- CODE: 
idade = input("40:")
print("daquia a 10 anos, terei", 40 + 5, "anos")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
---- user output:
40:daquia a 10 anos, terei 45 anos
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
---- user output:
40:daquia a 10 anos, terei 45 anos
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
---- user output:
40:daquia a 10 anos, terei 45 anos
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
---- user output:
40:daquia a 10 anos, terei 45 anos
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
---- user output:
40:daquia a 10 anos, terei 45 anos
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
---- user output:
40:daquia a 10 anos, terei 45 anos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-31 20:10:24)
-- CODE: 
idade = input(("40:"))
print("Daqui a 10 anos, você terá ", 40 + 10, "anos")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
---- user output:
40:Daqui a 10 anos, você terá  50 anos
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
---- user output:
40:Daqui a 10 anos, você terá  50 anos
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
---- user output:
40:Daqui a 10 anos, você terá  50 anos
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
---- user output:
40:Daqui a 10 anos, você terá  50 anos
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
---- user output:
40:Daqui a 10 anos, você terá  50 anos
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
---- user output:
40:Daqui a 10 anos, você terá  50 anos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-31 20:02:00)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
---- user output:
None
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
---- user output:
None
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
---- user output:
None
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
---- user output:
None
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
---- user output:
None
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
